--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "less.js"]
 	path = less.js
 	url = https://github.com/cloudhead/less.js.git
+[submodule "static/bootstrap"]
+	path = static/bootstrap
+	url = https://github.com/twitter/bootstrap.git
