--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "static/bootstrap"]
 	path = static/bootstrap
 	url = https://github.com/twitter/bootstrap.git
+[submodule "modules/bootstrap"]
+	path = modules/bootstrap
+	url = git://github.com/twitter/bootstrap.git
